<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022-2023 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->

<!--Let the use select the size of the desired Froyo-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.fragments.SizeFragment">

    <!--RadioButtons to select the size of the Froyo-->
    <RadioGroup
        android:id="@+id/rgSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_small"
            android:textColor="@color/teal"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_medium"
            android:textColor="@color/teal"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_large"
            android:textColor="@color/teal"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbExtraLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_extra_large"
            android:textColor="@color/teal"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvSizeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_title"
        android:textColor="@color/purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rgSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Button to cancel the order-->
    <Button
        android:id="@+id/bSizeCancel"
        style="?materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Button to proceed to the next screen-->
    <Button
        android:id="@+id/bSizeNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>